--- a/v1paint/style.css
+++ b/v1paint/style.css
@@ -258,7 +258,7 @@ section{
 }
 @media(max-width:449px){
     .content h2{
-        font-size: 25px;
+        font-size: 26px;
         color:brown;
     }
     .content h3{
@@ -276,7 +276,7 @@ section{
         padding-left: 10px;
     }
     .introduce-content p{
-        font-size: 15px;
+        font-size: 18px;
         color: black;
         padding:10px;
         margin-bottom: 10px;
@@ -298,7 +298,7 @@ section{
         color:black;
     }
     .artist-second .work-text p{
-        font-size: 15px;
+        font-size: 18px;
         margin-top: 10px; 
         padding: 10px;
         
@@ -314,5 +314,6 @@ section{
         width:300px;
         text-align: center;
         padding-left: 120px;
+        margin-top: 20px;
     }
 }
