--- a/v1paint/style.css
+++ b/v1paint/style.css
@@ -60,7 +60,7 @@ header .navbar a:hover{
     color:rgb(9,152,152);
     border:1px solid rgb(9,152,152);
     border-radius: 5px;
-    padding:8px;
+    padding:5px;
     display:none;
     text-decoration: none;
 }
@@ -74,15 +74,12 @@ header .navbar a:hover{
     background-color: lightgrey;
 }
 /* 第二區 首頁 */
-section{
-    padding:10px;
-}
+
 .home{
     display:flex;
     flex-wrap: wrap;
     gap:10px;
     min-height: 500px;
-
     background: url(../v1paint/images/the-town-bg-01.jpg) no-repeat;
     background-size: cover;
     background-position: center;
@@ -191,20 +188,9 @@ section{
     font-size: 45px;
     padding-bottom: 10px;
 }
-.artist-second .work-text .work-pic{
-    width:800px;
-    text-align: center;
-    padding-left: 120px;
-}
-.department{
-    display:flex;
-    flex-wrap: wrap;
-    gap:10px;
-    min-height: 500px;
-    align-items: center;
-    background: url(../v1paint/images/department-menu.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
+.artist-second .work-text img{
+    
+    vertical-align: middle;
 }
 .department-content{
     padding: 10px;
@@ -212,25 +198,64 @@ section{
 }
 
 
-/* RWD手機板 */
-@media(max-width:600px){
+/* RWD平板版 */
+@media(max-width:769px){
+    header h1{
+        font-size: 22px;
+        font-weight: normal;
+        color:black;
+        padding-right: 65px;
+    }
     .content h2{
-        font-size: 30px;
-        padding:10px;
+        font-size: 40px;
+        color:brown;
     }
     .content h3{
-        font-size: 26px;
-        padding:10px;
+        font-size: 18px;
+        color:brown;
+    }
+    .content h4{
+        font-size: 20px;
+        color:brown;
     }
     .content p{
-        font-size: 22px;
-        padding: 10px;
+        font-size: 18px;
+        font-family: PMingLiU;
+        color:black;
+        padding: 20px;
+        line-height: 30px;
     }
     #menu-bar{
         display:initial;
         position: absolute;
         right:10px;
         top:10px;
+    }
+    .introduce-content h3{
+        font-size: 30px;
+        color: brown;
+        padding-left: 10px;
+        padding-bottom: 20px;
+        text-align: center;
+    }
+    .introduce-content h2{
+        font-size: 23px;
+        color:brown;
+        padding-bottom: 10px;
+        text-align: center;
+        margin-top: -30px;
+    }
+    .introduce-content p{
+        font-size: 19px;
+        color: black;
+        padding:10px;
+        margin-bottom: 10px;
+        letter-spacing: 2px;
+    }
+    .introduce-content{
+        padding: 10px;
+        margin-top: 10px;
+    
     }
     header .navbar{
         position: absolute;
@@ -256,17 +281,123 @@ section{
         clip-path: polygon(0 0,100% 0, 100% 100%, 0 100%);
         padding:10px;
     }
+    .nav-tabs .nav-link.active{
+        color:black;
+        background-color: white;
+        font-weight: bolder;
+    }
+    .nav-tabs .nav-link{
+        font-size:18px;
+        background-color: lightgrey;
+        color:black;
+        font-weight: bolder;
+    }
+    .artist-second .work-text h6{
+        font-size: 20px;
+        color:brown;
+        font-weight: bolder;
+        margin-top: 20px;
+        margin-left: -10px;
+        padding: 20px; 
+    }
+    .artist-second .work-text p{
+        font-size: 20px;
+        margin-top: -30px;
+        padding: 10px;
+    }
+    .artist-second .work-text .highlight-text p{
+        font-size: 18px;
+        margin-top: -30px;
+    }
     .artist-second .work-text h2{
-        font-size: 30px;
+        font-size: 27px;
         padding-bottom: 10px;
+        padding-left: 10px;
+        color:brown;
+        font-weight: bolder;
     }
-    .artist-second .work-text .work-pic{
-        width:100vw;
-        margin-left: -80px;
+    .artist-second .work-text h5{
+        font-size: 20px;
+        margin-top: 10px;
+        padding: 10px;
+        text-align: center;
+        padding-bottom: 20px;
     }
-    
+    .artist-second .work-text h4{
+        font-size: 20px;
+        margin-top: 25px;
+        padding: 10px;
+    }
+    .artist-second .work-text .text-version-1 h1{
+        font-size: 22px;
+        margin-bottom: 20px;
+        padding: 10px;
+        margin-top: -20px;
+        color:brown;
+        font-weight: bolder;
+    }
+    .artist-second .work-text .text-version-1 p{
+        font-size: 17px;
+        margin-left: 15px;
+        line-height: 28px;
+    }
+    .artist-second .self-introduce p{
+        font-size: 17px;
+        padding: 10px;
+    }
+    .artist-second .self-introduce a{
+        font-size: 17px;
+        padding: 10px;
+    }
+    .artist-second .work-text img{
+        max-width: 100%;
+        vertical-align: middle;
+        padding: 20px;
+    }
+    .menu-pic{
+        max-width:100%;
+    }
+    .menu-pic img{
+        max-width: 100%;
+    }
+    .department-content h3{
+        font-size: 27px;
+        color:brown;
+        padding-left: 10px;
+        padding-bottom: 20px;
+    }
+    .department-content p{
+        font-size: 20px;
+        color:black;
+        padding: 10px;
+        margin-bottom: 10px;
+        letter-spacing: 2px;
+    }
+    .picture-content img{
+        width:100%;
+        vertical-align: middle;
+        padding-bottom: 10px;
+        padding: 10px;
+    }
+    header h1{
+        font-size: 26px;
+        font-weight: normal;
+        color:black;
+        padding-right: 70px;
+    }
+    .container-1 .map{
+        margin-top: 10px;
+        padding-bottom: 20px;
+        padding: 10px;
+    }
+
 }
+/* RWD手機板 */
 @media(max-width:449px){
+    html{
+        width:100%;
+        height: 100%;
+    }
     .home{
         display:flex;
         flex-wrap: wrap;
@@ -303,8 +434,14 @@ section{
         padding-left: 10px;
         padding-bottom: 20px;
     }
+    .introduce-content h2{
+        font-size: 20px;
+        color:brown;
+        padding-bottom: 10px;
+        margin-top: -30px;
+    }
     .introduce-content p{
-        font-size: 18px;
+        font-size: 16px;
         color: black;
         padding:10px;
         margin-bottom: 10px;
@@ -338,7 +475,6 @@ section{
     }
     .artist-second .work-text p{
         font-size: 18px;
-        
         margin-top: -30px;
         padding: 10px;
         
@@ -359,12 +495,50 @@ section{
         margin-top: 10px; 
         padding: 10px;
         text-align: center;
+        padding-bottom: 20px;
 
     }
+    .artist-second .work-text h4{
+        font-size: 18px;
+        margin-top: 25px;
+        padding: 10px;
+    }
+    .artist-second .work-text .text-version-1 h1{
+        font-size: 20px;
+        margin-bottom: 20px;
+        padding:10px;
+        margin-top: -20px;
+        color:brown;
+        font-weight: bolder;
+    }
+    .artist-second .work-text .text-version-1 p{
+        font-size: 15px;
+        margin-left: 15px;
+        line-height: 28px;
+    }
+    .artist-second .self-introduce p{
+        font-size:15px;
+        padding: 10px;
+    }
+    .artist-second .self-introduce a{
+        font-size:15px;
+        padding: 10px;
+    }
     .artist-second .work-text .work-pic{
-        /* width:400px; */
+        /* width:400px;  */
+        max-width: 100%;
         vertical-align: middle;
+        padding: 20px;
         
+    }
+    .menu-pic{
+        width:100%;
+        
+    }
+    .menu-pic img{
+        
+    
+        max-width:100%;
     }
     .department-content h3{
         font-size: 25px;
@@ -382,8 +556,9 @@ section{
     .picture-content img{
         width: 100%;
         vertical-align: middle;
-        margin-bottom: 10px;  
-        padding-bottom: 10px;
+        /* margin-bottom: 10px;  
+        padding-bottom: 10px; */
+        padding: 10px;
     }
     header h1{
         font-size: 22px;
@@ -394,5 +569,6 @@ section{
     .container-1 .map{
         margin-top: 10px;
         padding-bottom: 20px;
+        padding: 10px;
     }
 }
