--- a/v1paint/style.css
+++ b/v1paint/style.css
@@ -42,7 +42,7 @@ header h1{
     font-size: 22px;
     font-weight: normal;
     color:black;
-    padding-right: 430px;
+    padding-left: 2px;
 }
 
 header .navbar a:hover{
@@ -52,7 +52,7 @@ header .navbar a:hover{
     margin-left: 10px;
     transition: 1s;
     background-color: white;
-    padding:20px 10px 20px 10px;
+    padding:10px 10px 10px 10px;
 }
 #menu-bar{
     font-size: 25px;
@@ -65,13 +65,16 @@ header .navbar a:hover{
     text-decoration: none;
 }
 .nav-tabs .nav-link.active{
-    color:white;
-    background-color: rgb(136, 25, 247);
-    
+    color:black;
+    background-color: white;
+    font-weight: bolder;
 }
-.nav-link{
-    font-size: 20px;
+.nav-tabs .nav-link{
+    font-size:20px;
     background-color: lightgrey;
+    color:black;
+    font-weight: bolder;
+    
 }
 /* 第二區 首頁 */
 
@@ -90,20 +93,26 @@ header .navbar a:hover{
     text-align: center;
 }
 .content h2{
-    font-size: 50px;
-    color: lightcoral;
+    font-size: 60px;
+    color: brown;
 }
 .content h3{
     font-size: 35px;
-    color: lightcoral;
+    color: brown;
     padding: 10px;
+}
+.content h4{
+    font-size: 35px;
+    color:brown;
 }
 .content p{
     font-size: 20px;
-    color: lightcoral;
-    padding:10px;
+    color: black;
+    padding:20px;
     margin-bottom: 10px;
     font-weight: bold;
+    line-height: 30px;
+    font-family: PMinLiu;
 }
 
 /* 第一區header introduce */
@@ -123,14 +132,24 @@ header .navbar a:hover{
 
 }
 .introduce-content h3{
-    font-size: 50px;
-    color: lightcoral;
+    font-size: 40px;
+    color: brown;
+    text-align: center;
+}
+.introduce-content h2{
+    font-size: 30px;
+    color:brown;
+    text-align: center;
+    letter-spacing: 4px;
+    margin-bottom: 10px;
 }
 .introduce-content p{
-    font-size: 10px;
-    color: lightcoral;
+    font-size: 20px;
+    color: black;
     padding:10px;
     margin-bottom: 10px;
+    margin-bottom: 10px;
+    letter-spacing: 2px;
 }
 /* artist */
 .artist-first{
@@ -178,28 +197,120 @@ header .navbar a:hover{
     text-align: center;
     font-size: 18px;
 }
+
+.artist-second .work-text h6{
+    font-size: 25px;
+    color: brown;
+    font-weight: bolder;
+    margin-top: 20px;
+    padding-bottom: 1rem;
+    margin-left: 10px;
+    padding-top: 10px;
+    line-height: 28px;
+}
 .artist-second .work-text p{
-    font-size: 20px;
-    /* margin-top: 10px; */
-    padding: 20px;
-    padding-top: 20px;
+    font-size: 25px;
+    margin-top: -30px;
+    padding: 10px;
+}
+.artist-second .work-text .highlight-text p{
+    font-size: 25px;
+    margin-top: -30px;
 }
 .artist-second .work-text h2{
-    font-size: 45px;
+    font-size: 35px;
     padding-bottom: 10px;
+    padding-left: 10px;
+    color:brown;
+    font-weight: bolder;
 }
-.artist-second .work-text img{
-    
-    vertical-align: middle;
-}
-.department-content{
+.artist-second .work-text h5{
+    font-size: 28px;
+    margin-top: 10px;
     padding: 10px;
-    font-size: 20px;
+    text-align: center;
+    padding-bottom: 20px;
+}
+.artist-second .work-text h4{
+    font-size: 25px;
+    margin-top: 25px;
+    padding: 10px;
+    padding-left: 10px;
+}
+.artist-second .work-text .text-version-1 h1{
+    font-size: 35px;
+    margin-bottom: 20px;
+    padding: 10px;
+    margin-top: -20px;
+    color: brown;
+    font-weight: bolder;
+}
+.artist-second .work-text .text-version-1 p{
+    font-size: 25px;
+    margin-left: 15px;
+    line-height: 28px;
+}
+.artist-second .self-introduce p{
+    font-size: 25px;
+    padding: 10px;
+}
+.artist-second .self-introduce a{
+    font-size: 25px;
+    padding: 10px;
 }
 
+.menu-pic{
+    width: 100%;
+}
+.menu-pic img{
+    max-width: 100%;
+}
+.department-content h3{
+    font-size: 35px;
+    color:brown;
+    padding-left: 10px;
+    padding-bottom: 20px;
+}
+.department-content p{
+    font-size: 25px;
+    color:black;
+    padding: 10px;
+    margin-bottom: 10px;
+    letter-spacing: 2px;
+}
+.picture-content img{
+    width:100%;
+    vertical-align: middle;
+    padding-bottom: 10px;
+    padding: 10px;
+}
+.container-1 .map{
+    margin-top: 10px;
+    padding-bottom: 20px;
+    padding: 10px;
+}
+
+@media(min-width:1024px) and (max-width:3000px){
+    .artist-second .work-text .work-pic{
+    
+        height: 100vh;
+        margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        /* vertical-align: middle; */
+        padding: 20px; 
+    }
+    .artist-second .work-text .work-pic img{
+        /* max-width: 100%; */
+        max-height: 100%;
+
+    }
+}
 
 /* RWD平板版 */
-@media(max-width:769px){
+@media(min-width:720px) and (max-width:1023.99px){
     header h1{
         font-size: 22px;
         font-weight: normal;
@@ -211,11 +322,11 @@ header .navbar a:hover{
         color:brown;
     }
     .content h3{
-        font-size: 18px;
+        font-size: 25px;
         color:brown;
     }
     .content h4{
-        font-size: 20px;
+        font-size: 25px;
         color:brown;
     }
     .content p{
@@ -349,10 +460,35 @@ header .navbar a:hover{
         font-size: 17px;
         padding: 10px;
     }
-    .artist-second .work-text img{
-        max-width: 100%;
-        vertical-align: middle;
-        padding: 20px;
+    .artist-second .work-text .text-version-1 table{
+        border-collapse: collapse;
+        border-spacing: 0; 
+        margin-bottom: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: -15px;
+        margin-left: 80px;
+    }
+    .artist-second .work-text .text-version-1 .table-introduce td{
+        /* border:1px solid black; */
+        padding: 5px;
+        font-size: 18px;
+    }
+    .artist-second .work-text .work-pic{
+    
+        height: 100vh;
+        margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        /* vertical-align: middle; */
+        padding: 30px; 
+    }
+    .artist-second .work-text .work-pic img{
+        /* max-width: 100%; */
+        max-height: 100%;
+
     }
     .menu-pic{
         max-width:100%;
@@ -393,7 +529,7 @@ header .navbar a:hover{
 
 }
 /* RWD手機板 */
-@media(max-width:449px){
+@media(min-width:300px) and (max-width:719.99px){
     html{
         width:100%;
         height: 100%;
@@ -409,6 +545,36 @@ header .navbar a:hover{
         background-size: contain;
 
     }
+    #menu-bar{
+        display:initial;
+        position: absolute;
+        right:10px;
+        top:10px;
+    }
+    header .navbar{
+        position: absolute;
+        top:80px; left:0px;right:0px;
+        background-color: lightgray;
+        border-top:3px solid grey;
+        display:flex;
+        flex-direction: column;
+        align-items: stretch;
+        /* 隱藏下拉選單 */
+        clip-path:polygon(0 0, 100% 0, 100% 0, 0 0 );
+    }
+    header .navbar a{
+        display:block;
+        font-size:22px;
+        font-weight: normal;
+        color:black;
+        margin:10px; padding:6px;
+        border-left: 3px solid grey;
+        background-color: white;
+    }
+    header .navbar.active{
+        clip-path: polygon(0 0,100% 0, 100% 100%, 0 100%);
+        padding:10px;
+    }
     .content h2{
         font-size: 40px;
         color:brown;
@@ -418,7 +584,7 @@ header .navbar a:hover{
         color:brown;
     }
     .content h4{
-        font-size: 20px;
+        font-size: 18px;
         color:brown;
     }
     .content p{
@@ -429,7 +595,7 @@ header .navbar a:hover{
         line-height: 30px;
     }
     .introduce-content h3{
-        font-size: 25px;
+        font-size: 30px;
         color: brown;
         padding-left: 10px;
         padding-bottom: 20px;
@@ -446,6 +612,7 @@ header .navbar a:hover{
         padding:10px;
         margin-bottom: 10px;
         letter-spacing: 2px;
+        line-height: 28px;
     }
     .introduce-content{
         padding: 10px;
@@ -477,11 +644,12 @@ header .navbar a:hover{
         font-size: 18px;
         margin-top: -30px;
         padding: 10px;
-        
+        letter-spacing: 2px;
     }
     .artist-second .work-text .highlight-text p{
-        font-size: 16px;
+        font-size: 18px;
         margin-top: -30px;
+        letter-spacing: 2px;
     } 
     .artist-second .work-text h2{
         font-size: 25px;
@@ -504,7 +672,7 @@ header .navbar a:hover{
         padding: 10px;
     }
     .artist-second .work-text .text-version-1 h1{
-        font-size: 20px;
+        font-size: 22px;
         margin-bottom: 20px;
         padding:10px;
         margin-top: -20px;
@@ -517,14 +685,36 @@ header .navbar a:hover{
         line-height: 28px;
     }
     .artist-second .self-introduce p{
-        font-size:15px;
+        font-size:16px;
         padding: 10px;
     }
     .artist-second .self-introduce a{
-        font-size:15px;
+        font-size:16px;
         padding: 10px;
+        margin-left: -10px;
+    }
+    .artist-second .work-text .text-version-1 table{
+        border-collapse: collapse;
+        border-spacing: 0; 
+        margin-bottom: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: -15px;
+        margin-left: 25px;
+    }
+    .artist-second .work-text .text-version-1 .table-introduce td{
+        /* border:1px solid black; */
+        padding: 5px;
+        font-size: 18px;
     }
     .artist-second .work-text .work-pic{
+        /* width:400px;  */
+        max-width: 100%;
+        vertical-align: middle;
+        padding: 20px;
+        
+    }
+    .artist-second .work-text .work-pic img{
         /* width:400px;  */
         max-width: 100%;
         vertical-align: middle;
