--- a/v1paint/style.css
+++ b/v1paint/style.css
@@ -293,7 +293,7 @@ header .navbar a:hover{
 
 @media(min-width:1024px) and (max-width:3000px){
     .artist-second .work-text .work-pic{
-    
+        
         height: 100vh;
         margin: auto;
         display: flex;
@@ -301,17 +301,67 @@ header .navbar a:hover{
         align-items: center;
         justify-content: center;
         /* vertical-align: middle; */
-        padding: 20px; 
+        border:10px solid black;
+         
     }
     .artist-second .work-text .work-pic img{
         /* max-width: 100%; */
         max-height: 100%;
-
+        border:10px solid black;
+        
+    }
+    .artist-second .artist-text h3{
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 0 20px;
+        text-align: center;
+        font-size: 30px;
+    }
+    .artist-second .artist-text h2{
+        font-size: 50px;
+    }
+    .artist-second .work-text .text-version-1 table{
+        border-collapse: collapse;
+        border-spacing: 0; 
+        margin-bottom: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: -15px;
+        margin-left: 100px;
+    }
+    .artist-second .work-text .text-version-1 .table-introduce td{
+        /* border:1px solid black; */
+        padding: 5px;
+        font-size: 25px;
+    }
+    /* department區域 */
+    .menu-pic img{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        width:100%;
+        margin-bottom: 30px;
+    }
+    .picture-content{
+        margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        padding: 0px 220px;
+    }
+    .picture-content img{
+        height: auto;
+        max-width: 100%;
+        margin-bottom: 10px;
     }
 }
 
 /* RWD平板版 */
 @media(min-width:720px) and (max-width:1023.99px){
+    
     header h1{
         font-size: 22px;
         font-weight: normal;
@@ -485,8 +535,15 @@ header .navbar a:hover{
         align-items: center;
         justify-content: center;
         /* vertical-align: middle; */
-        padding: 30px; 
+        
     }
+    .artist-second .work-text img{
+        border:10px solid black;
+        
+    }
+    /* .artist-second .work-text{
+        margin-right: 40px;
+    } */
     .artist-second .work-text .work-pic img{
         /* max-width: 100%; */
         max-height: 100%;
@@ -532,19 +589,16 @@ header .navbar a:hover{
 }
 /* RWD手機板 */
 @media(min-width:300px) and (max-width:719.99px){
-    html{
-        width:100%;
-        height: 100%;
-    }
     .home{
         display:flex;
         flex-wrap: wrap;
         gap:10px;
         min-height: 300px;
-     
+
         background: url(../v1paint/images/the-town-bg-01.jpg) no-repeat;
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
+        background-position:center;
 
     }
     #menu-bar{
@@ -710,13 +764,20 @@ header .navbar a:hover{
         padding: 5px;
         font-size: 18px;
     }
+    .artist-second .work-text{
+        padding: 10px;
+    }
     .artist-second .work-text .work-pic{
         /* width:400px;  */
         max-width: 100%;
         vertical-align: middle;
-        padding: 20px;
         
+        border:6px solid black;
+        margin: auto;
     }
+    /* .artist-second .work-text img{
+        padding: 0px;
+    } */
     .artist-second .work-text .work-pic img{
         /* width:400px;  */
         max-width: 100%;
