--- a/v1paint/style.css
+++ b/v1paint/style.css
@@ -123,7 +123,7 @@ header .navbar a:hover{
 }
 
 /* 第一區header introduce */
-.introduce{
+/* .introduce{
     display:flex;
     flex-wrap: wrap;
     gap:10px;
@@ -132,6 +132,12 @@ header .navbar a:hover{
     background: url(../v1paint/images/banner.jpg) no-repeat;
     background-size: cover;
     background-position: center;
+} */
+.introduce .banner-desktop img{
+    max-width: 100%;
+}
+.introduce .banner-mobile img{
+    max-width: 100%;
 }
 .introduce-content{
     padding: 30px;
@@ -159,7 +165,7 @@ header .navbar a:hover{
     letter-spacing: 2px;
 }
 /* artist */
-.artist-first{
+/* .artist-first{
     display:flex;
     flex-wrap: wrap;
     gap:10px;
@@ -168,6 +174,12 @@ header .navbar a:hover{
     background: url(../v1paint/images/banner.jpg) no-repeat;
     background-size: cover;
     background-position: center;
+} */
+.artist-first .banner-desktop img{
+    max-width: 100%;
+}
+.artist-first .banner-mobile img{
+    max-width: 100%;
 }
 .container{
     padding: 20px 0;
@@ -304,6 +316,18 @@ header .navbar a:hover{
     .home .banner-mobile img{
         display: none;
     }
+    .introduce .banner-desktop img{
+        max-width: 100%;
+    }
+    .introduce .banner-mobile img{
+        display: none;
+    }
+    .artist-first .banner-desktop img{
+        max-width: 100%;
+    }
+    .artist-first .banner-mobile img{
+        display: none;
+    }
     .artist-second .work-text .work-pic{
         
         height: 100vh;
@@ -377,6 +401,18 @@ header .navbar a:hover{
         max-width: 100%;
     }
     .home .banner-mobile img{
+        display: none;
+    }
+    .introduce .banner-desktop img{
+        max-width: 100%;
+    }
+    .introduce .banner-mobile img{
+        display: none;
+    }
+    .artist-first .banner-desktop img{
+        max-width: 100%;
+    }
+    .artist-first .banner-mobile img{
         display: none;
     }
     header h1{
@@ -628,6 +664,20 @@ header .navbar a:hover{
         display: none;
     }
     .home .banner-mobile img{
+        max-width: 100%;
+        margin-top: 40px;
+    }
+    .introduce .banner-desktop img{
+        display: none;
+    }
+    .introduce .banner-mobile img{
+        max-width: 100%;
+        margin-top: 40px;
+    }
+    .artist-first .banner-desktop img{
+        display: none;
+    }
+    .artist-first .banner-mobile img{
         max-width: 100%;
         margin-top: 40px;
     }
