--- a/v1paint/style.css
+++ b/v1paint/style.css
@@ -121,6 +121,109 @@ header .navbar a:hover{
     font-family: PMinLiu;
     text-decoration: none;
 }
+#home-more{
+    width: 100%;
+}
+.home-more .box-container_1{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding-bottom: 30px;
+    padding-left: 80px;
+    padding-right: 80px;
+    transition: .5s; 
+}
+.home-more .box-container_1 .box{
+    flex:1 1 10px;
+    /* padding: 0px; */
+    border: 1px solid black;
+    height: 300px;
+    
+    /* width:300px; */
+    border-radius: 10px;
+    
+    box-shadow: 0 10px 10px 3px rgb(154, 153, 153);
+    /* cursor: pointer;
+    opacity: 1; */
+    position: relative;
+    overflow: hidden;
+}
+.home-more .box-container_1 .box img{
+    width: 100%;
+    height:100%;
+    object-fit: cover;
+    border-radius: 10px;
+    z-index: 1;
+    
+}
+.home-more .box-container_1 .box .location{
+    position: absolute;
+    color:white;
+    opacity: 0.8;
+    font-size: 20px;
+    top:80%;
+    left: 35%;
+}
+
+.home-more .box-container_1 .box:hover{
+    transform: translateY(7px);
+} 
+.home-more .box-container_1 .box .box-content{
+    position: absolute;
+    top:-100%;
+    left:0;
+    height:100%;
+    width: 100%;
+    background: white;
+    padding: 10px;
+    padding-top: 20px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+.home-more .box-container_1 .box:hover .box-content{
+    top: 0;
+    opacity: 0.8;
+}
+.home-more .box-container_1 .box .box-content p{
+    font-size: 20px;
+    font-weight: bolder;
+    color:black;
+    text-align: left;
+}
+.home-more .box-container_2{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    
+}
+.home-more .box-container_2 .box{
+    flex:1 10px;
+    padding: 0px;
+    border: 1px solid black;
+    padding-bottom: 30px;
+    height: 300px;
+    border-radius: 20px;
+    position: relative;
+}
+.home-more .box-container_2 .box img{
+    height: 300px;
+    object-fit: cover;
+    width: 100%;
+    z-index: 1;
+    border-radius: 20px;
+}
+.home-more .box-container_2 .box .location{
+    position: absolute;
+    color:white;
+    opacity: 0.8;
+    font-size: 20px;
+    top:80%;
+    left: 35%;
+}
 
 /* 第一區header introduce */
 /* .introduce{
@@ -735,6 +838,9 @@ header .navbar a:hover{
         padding: 20px;
         line-height: 30px;
         text-decoration: none;
+    }
+    .home-more .box-container_1 .box{
+        flex:1 1 auto;
     }
     .introduce-content h3{
         font-size: 30px;
