--- a/v1paint/style.css
+++ b/v1paint/style.css
@@ -124,6 +124,15 @@ header .navbar a:hover{
 #home-more{
     width: 100%;
 }
+.home-more .heading{
+    font-size: 30px;
+    /* 上右下左 */
+    padding: 20px 0px 30px 30px;
+}
+.home-more h2{
+    font-size: 20px;
+    padding: 0px 30px 30px 30px;
+}
 .home-more .box-container_1{
     display: flex;
     flex-wrap: wrap;
@@ -159,10 +168,11 @@ header .navbar a:hover{
 .home-more .box-container_1 .box .location{
     position: absolute;
     color:white;
+    background-color:black;
     opacity: 0.8;
     font-size: 20px;
-    top:80%;
-    left: 35%;
+    top:88%;
+    left: 6%;
 }
 
 .home-more .box-container_1 .box:hover{
@@ -191,40 +201,277 @@ header .navbar a:hover{
     color:black;
     text-align: left;
 }
+/* 第二區塊 */
 .home-more .box-container_2{
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    
+    gap: 30px;
+    padding-bottom: 30px;
+    padding-left: 80px;
+    padding-right: 80px;
+    transition: .5s; 
 }
 .home-more .box-container_2 .box{
-    flex:1 10px;
-    padding: 0px;
+    flex:1 1 10px;
+    /* padding: 0px; */
     border: 1px solid black;
-    padding-bottom: 30px;
     height: 300px;
-    border-radius: 20px;
+    
+    /* width:300px; */
+    border-radius: 10px;
+    
+    box-shadow: 0 10px 10px 3px rgb(154, 153, 153);
+    /* cursor: pointer;
+    opacity: 1; */
     position: relative;
+    overflow: hidden;
 }
 .home-more .box-container_2 .box img{
-    height: 300px;
-    object-fit: cover;
     width: 100%;
+    height:100%;
+    object-fit: cover;
+    border-radius: 10px;
     z-index: 1;
-    border-radius: 20px;
+    
 }
 .home-more .box-container_2 .box .location{
     position: absolute;
     color:white;
     opacity: 0.8;
     font-size: 20px;
-    top:80%;
-    left: 35%;
+    top:88%;
+    left: 6%;
 }
 
+.home-more .box-container_2 .box:hover{
+    transform: translateY(7px);
+} 
+.home-more .box-container_2 .box .box-content{
+    position: absolute;
+    top:-100%;
+    left:0;
+    height:100%;
+    width: 100%;
+    background: white;
+    padding: 10px;
+    padding-top: 20px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+.home-more .box-container_2 .box:hover .box-content{
+    top: 0;
+    opacity: 0.8;
+}
+.home-more .box-container_2 .box .box-content p{
+    font-size: 20px;
+    font-weight: bolder;
+    color:black;
+    text-align: left;
+}
+/* 第三區塊 */
+.home-more .box-container_3{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding-bottom: 30px;
+    padding-left: 80px;
+    padding-right: 80px;
+    transition: .5s; 
+}
+.home-more .box-container_3 .box{
+    flex:1 1 10px;
+    /* padding: 0px; */
+    border: 1px solid black;
+    height: 300px;
+    
+    /* width:300px; */
+    border-radius: 10px;
+    
+    box-shadow: 0 10px 10px 3px rgb(154, 153, 153);
+    /* cursor: pointer;
+    opacity: 1; */
+    position: relative;
+    overflow: hidden;
+}
+.home-more .box-container_3 .box img{
+    width: 100%;
+    height:100%;
+    object-fit: cover;
+    border-radius: 10px;
+    z-index: 1;
+    
+}
+.home-more .box-container_3 .box .location{
+    position: absolute;
+    color:white;
+    opacity: 0.8;
+    font-size: 20px;
+    top:88%;
+    left: 6%;
+}
+.home-more .box-container_3 .box:hover{
+    transform: translateY(7px);
+} 
+.home-more .box-container_3 .box .box-content{
+    position: absolute;
+    top:-100%;
+    left:0;
+    height:100%;
+    width: 100%;
+    background: white;
+    padding: 10px;
+    padding-top: 20px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+.home-more .box-container_3 .box:hover .box-content{
+    top: 0;
+    opacity: 0.8;
+}
+.home-more .box-container_3 .box .box-content p{
+    font-size: 20px;
+    font-weight: bolder;
+    color:black;
+    text-align: left;
+}
+/* 第四區塊 */
+.home-more .box-container_4{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding-bottom: 30px;
+    padding-left: 80px;
+    padding-right: 80px;
+    transition: .5s; 
+}
+.home-more .box-container_4 .box{
+    flex:1 1 10px;
+    /* padding: 0px; */
+    border: 1px solid black;
+    height: 300px;
+    
+    /* width:300px; */
+    border-radius: 10px;
+    
+    box-shadow: 0 10px 10px 3px rgb(154, 153, 153);
+    /* cursor: pointer;
+    opacity: 1; */
+    position: relative;
+    overflow: hidden;
+}
+.home-more .box-container_4 .box img{
+    width: 100%;
+    height:100%;
+    object-fit: cover;
+    border-radius: 10px;
+    z-index: 1;
+    
+}
+.home-more .box-container_4 .box .location{
+    position: absolute;
+    color:white;
+    opacity: 0.8;
+    font-size: 20px;
+    top:88%;
+    left: 6%;
+}
+
+.home-more .box-container_4 .box:hover{
+    transform: translateY(7px);
+} 
+.home-more .box-container_4 .box .box-content{
+    position: absolute;
+    top:-100%;
+    left:0;
+    height:100%;
+    width: 100%;
+    background: white;
+    padding: 10px;
+    padding-top: 20px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+.home-more .box-container_4 .box:hover .box-content{
+    top: 0;
+    opacity: 0.8;
+}
+.home-more .box-container_4 .box .box-content p{
+    font-size: 20px;
+    font-weight: bolder;
+    color:black;
+    text-align: left;
+}
+/* 第五區塊 */
+.home-more .box-container_5{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding-bottom: 30px;
+    padding-left: 80px;
+    padding-right: 80px;
+    transition: .5s; 
+}
+.home-more .box-container_5 .box{
+    flex:1 1 10px;
+    /* padding: 0px; */
+    border: 1px solid black;
+    height: 300px;
+    
+    /* width:300px; */
+    border-radius: 10px;
+    
+    box-shadow: 0 10px 10px 3px rgb(154, 153, 153);
+    /* cursor: pointer;
+    opacity: 1; */
+    position: relative;
+    overflow: hidden;
+}
+.home-more .box-container_5 .box img{
+    width: 100%;
+    height:100%;
+    object-fit: cover;
+    border-radius: 10px;
+    z-index: 1;
+    
+}
+.home-more .box-container_5 .box .location{
+    position: absolute;
+    color:white;
+    opacity: 0.8;
+    font-size: 20px;
+    top:88%;
+    left: 6%;
+}
+
+.home-more .box-container_5 .box:hover{
+    transform: translateY(7px);
+} 
+.home-more .box-container_5 .box .box-content{
+    position: absolute;
+    top:-100%;
+    left:0;
+    height:100%;
+    width: 100%;
+    background: white;
+    padding: 10px;
+    padding-top: 20px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+.home-more .box-container_5 .box:hover .box-content{
+    top: 0;
+    opacity: 0.8;
+}
+.home-more .box-container_5 .box .box-content p{
+    font-size: 20px;
+    font-weight: bolder;
+    color:black;
+    text-align: left;
+}
 /* 第一區header introduce */
 /* .introduce{
     display:flex;
@@ -839,9 +1086,61 @@ header .navbar a:hover{
         line-height: 30px;
         text-decoration: none;
     }
+    /* 第一區塊 */
     .home-more .box-container_1 .box{
         flex:1 1 auto;
     }
+    .home-more .box-container_1{
+        padding-right: 40px;
+        padding-left: 40px;
+    }
+    .home-more .box-container_1 .box .location{
+        left:6%;
+    }
+    /* 第二區塊 */
+    .home-more .box-container_2 .box{
+        flex:1 1 auto;
+    }
+    .home-more .box-container_2{
+        padding-right: 40px;
+        padding-left: 40px;
+    }
+    .home-more .box-container_2 .box .location{
+        left:6%;
+    }
+    /* 第三區塊 */
+    .home-more .box-container_3 .box{
+        flex:1 1 auto;
+    }
+    .home-more .box-container_3{
+        padding-right: 40px;
+        padding-left: 40px;
+    }
+    .home-more .box-container_3 .box .location{
+        left:6%;
+    }
+    /* 第四區塊 */
+    .home-more .box-container_4 .box{
+        flex:1 1 auto;
+    }
+    .home-more .box-container_4{
+        padding-right: 40px;
+        padding-left: 40px;
+    }.home-more .box-container_4 .box .location{
+        left:6%;
+    }
+    /* 第五區塊 */
+    .home-more .box-container_5 .box{
+        flex:1 1 auto;
+    }
+    .home-more .box-container_5{
+        padding-right: 40px;
+        padding-left: 40px;
+    }
+    .home-more .box-container_5 .box .location{
+        left:6%;
+    }
+
     .introduce-content h3{
         font-size: 30px;
         color: brown;
@@ -907,9 +1206,10 @@ header .navbar a:hover{
         font-weight: bolder;
     }
     .artist-second .work-text h5{
-        font-size: 18px;
+        font-size: 16px;
         margin-top: 10px; 
-        padding: 10px;
+        padding: 5px;
+        line-height: 26px;
         text-align: center;
         padding-bottom: 20px;
 
